# HyprMonitor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands_bear.sh  default.nix  flake.nix  hyprpm.toml  meson.build  result  shell.nix
.cache/clangd/index/: main.cpp.BEE4A2B05BD62090.idx
src/: CMakeLists.txt  config.cpp  config.h  main.cpp
